--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section>
-            <h1><span>Fique atento</span>
+            <h1><span>Fique de olho</span>
             <br> no que importa</h1>
             <p>Monitoramento em tempo real com alertas inteligentes para sua aplicação nunca sair do ar sem você saber.</p>
             <a class="cor-branca" href="#">Testar versão demo</a>
