--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
-    <title>TECBOARD</title>
+    <title>TECBOARD TESTE</title>
     
 </head>
 <body>
@@ -20,8 +20,8 @@
         <section>
             <h1><span>Fique de olho</span>
             <br> no que importa</h1>
-            <p>Monitoramento em tempo real com alertas inteligentes para sua aplicação nunca sair do ar sem você saber.</p>
-            <a class="cor-branca" href="#">Testar versão demo</a>
+            <p>Monitoramento em tempo real com alertas inteligentes para sua aplicaÃ§Ã£o nunca sair do ar sem vocÃª saber.</p>
+            <a class="cor-branca" href="#">Testar versÃ£o demo</a>
             <img src="img/celulares_sobrepostos_desktop.png" alt="Dois celulares sobrepostos com uma sobra roxa entre eles.">    
            
         </section>
